<!-- vim: syntax=Markdown -->

# Changelog

## v0.6.0 (upcoming)

- All: Breaking: Commandline argument `--mode {parse,raw}` is removed in favor of a new
argument `--parse-text {True, False}`.
- All: Added (optional) QR and BarCode detection.
- Linux: Add support for clickable notification (if `send-notify` is available).
- Linux: AppImage no longer requires `libcrypt`.

## v0.5.9 (2024-11-10)

- All: Add Chinese translation. Thanks, [@mofazhe](https://github.com/mofazhe)! ([#661](https://github.com/dynobo/normcap/pull/661))
- All: Add Portuguese translation. Thanks, ssantos!
- Windows: Add portable package. Thanks, [@mofazhe](https://github.com/mofazhe)! ([#660](https://github.com/dynobo/normcap/pull/660), [#671](https://github.com/dynobo/normcap/pull/671))
- macOS: Drop support for macOS 12 (end of life).

## v0.5.8 (2024-05-19)

- Linux: Next try to fix issue on Ubuntu/Unity where the window doesn't show up. ([#651](https://github.com/dynobo/normcap/pull/651))

## v0.5.7 (2024-05-18)

- All: Add french translation. Thanks, [@NathanBnm](https://github.com/NathanBnm)! ([#648](https://github.com/dynobo/normcap/pull/648))
- Linux: Fix crash on wayland in case of user's home directory contains special character. Thanks, [@supersonictw](https://github.com/supersonictw)! ([#643](https://github.com/dynobo/normcap/issues/643))
- Linux: Fix issue on Ubuntu/Unity where the window doesn't show up. ([#651](https://github.com/dynobo/normcap/pull/651))

## v0.5.6 (2024-05-08)

- All: Fix minor typos in translations. ([#641](https://github.com/dynobo/normcap/pull/641))
- Linux: Fix clipboard on Wayland desktops other than GNOME. ([#640](https://github.com/dynobo/normcap/pull/640))

## v0.5.5 (2024-05-07)

- All: Add ukrainian translation. Thanks, [@thevllad](https://github.com/thevllad)! ([#625](https://github.com/dynobo/normcap/pull/625))
- All: Add russian translation. Thanks, [@ViktorOn](https://github.com/ViktorOn)! ([#611](https://github.com/dynobo/normcap/pull/611))